# cpp-template

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Taskfile.yml  conanfile.py  conanfile.txt  flake.nix
.claude/: settings.local.json
cmake/: ProjectSettings.cmake  ProjectVersion.cmake  RustSettings.cmake  debug.cmake
data/: config.xml  schema.xsd
profiles/: gcc12_x64  zig011_x64  zig11_x64
rust/: build.rs
scripts/: patch_cmakepresets.sh
src/: CMakeLists.txt  config.cpp  config.h  helpers.hpp  logging.cpp  logging.cppm  logging.h  main.cc  main.cpp  oxidize.hpp  print.hpp  types.h  types.hh  types.hpp  version.h  version.hh  version.hpp
src/cpp/: CMakeLists.txt  main.cpp  oxidize.hpp  types.hpp  version.hpp
src/rust/: build.rs
tests/: CMakeLists.txt  test_basic.cpp  test_main.cc  test_main.cpp
